# Tiago_pick_place

./: CMakeLists.txt  README.md  package.xml
launch/: assignment.launch
scripts/: dummy.txt  heartbeat_node.py  move_commands.txt  nodeA_as2.py  nodeB_as2.py  nodeC_as2.py  node_a.py  node_b_april_tag_detection.py  node_b_navigation.py  spin_and_move_node.py
